--- a/package.json
+++ b/package.json
@@ -12,36 +12,39 @@
     "access": "public"
   },
   "scripts": {
-    "clean": "rm -rf dist",
-    "build": "npm run clean && rollup -c ",
-    "build:watch": "rollup -c -w",
-    "prepare": "npm run build",
-    "start": "node -r tsconfig-paths/register index.js",
-    "dev": "node -r ts-node/register -r tsconfig-paths/register src/index.ts",
-    "test": "jest --passWithNoTests",
-    "lint": "eslint src --ext .ts"
+    "build": "tsc && vite build --ssr",
+    "test": "vitest --ui --coverage",
+    "test:ci": "vitest run --coverage",
+    "prepublishOnly": "npm run build --omit=dev",
+    "lint": "eslint --flag unstable_ts_config --config eslint.config.ts",
+    "predemo": "npm run build",
+    "demo": "tsx ./demo/index.ts",
+    "typedoc": "typedoc src/index.ts --tsconfig tsconfig.typedoc.json",
+    "prettier": "prettier -l \"{src,scripts,demo}/**/*.{ts,html}\"",
+    "prettier:fix": "npm run prettier -- --write",
+    "cspell": "cspell \"{src,demo,docs,scripts}/**/*.{ts,scss,html,md}\" && cspell \"./*.*\"",
+    "serve.docs": "cd docs && docsify serve",
+    "extract": "tsx scripts/extract-document.ts",
+    "run-ts": "tsx"
   },
   "exports": {
     ".": {
-      "require": "./dist/index.cjs.js",
-      "import": "./dist/index.esm.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
     }
   },
   "files": [
     "dist"
   ],
   "dependencies": {
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "adm-zip": "^0.5.16",
     "module-alias": "^2.2.3",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "^5.1.1",
-    "@rollup/plugin-commonjs": "^28.0.6",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "@rollup/plugin-replace": "^6.0.2",
-    "@rollup/plugin-typescript": "^12.1.4",
     "@types/adm-zip": "^0.5.7",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.1",
@@ -50,14 +53,16 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "prettier": "^3.6.2",
-    "rollup": "^4.50.1",
-    "rollup-plugin-dts": "^6.2.3",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.36.0",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "prettier-plugin-xml": "^0.1.0",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vite": "^7.1.5",
+    "vite-plugin-dts": "^4.5.4",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4"
   }
 }
