--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,37 @@
+// {
+//   "compilerOptions": {
+//     "target": "ES2020",
+//     "module": "ESNext",                     // Rollup will handle the bundling
+//     "rootDir": "src",
+//     "outDir": "dist",
+//     "declaration": true,                     // Generate .d.ts files
+//     "declarationDir": "dist/types",          // Temporary directory for .d.ts files
+//     "emitDeclarationOnly": false,            // Emit JS and declarations
+//     "esModuleInterop": true,
+//     "skipLibCheck": true,
+//     "strict": true,
+//     "moduleResolution": "node",              // Important for resolving relative paths
+//     "baseUrl": ".",                           // Needed for "paths"
+    
+//   },
+//   "include": ["src"],
+//   "exclude": ["node_modules", "dist"]
+// }
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",                     // Rollup will handle the bundling
-    "rootDir": "src",
-    "outDir": "dist",
-    "declaration": true,                     // Generate .d.ts files
-    "declarationDir": "dist/types",          // Temporary directory for .d.ts files
-    "emitDeclarationOnly": false,            // Emit JS and declarations
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "strict": true,
+    "declaration": true,
+    "declarationDir": "./dist/types",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "strict": true,
-    "moduleResolution": "node",              // Important for resolving relative paths
-    "baseUrl": ".",                           // Needed for "paths"
-    
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+    "outDir": "./dist"
   },
-  "include": ["src", "tests"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src", "tests"]
 }
