--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,25 +1,21 @@
 {
-    "semi": true,
-    "singleQuote": false,
-    "tabWidth": 2,
-    "useTabs": false,
-    "trailingComma": "es5",
-    "printWidth": 100,
-    "endOfLine": "lf",
-    "bracketSpacing": true,
-    "plugins": [
-      "prettier-plugin-xml",
-      "prettier-plugin-tailwindcss"
-    ],
-    "overrides": [
-      {
-        "files": "*.xml",
-        "options": {
-          "tabWidth": 2,
-          "xmlWhitespaceSensitivity": "ignore",
-          "xmlSelfClosingSpace": true
-        }
+  "semi": true,
+  "singleQuote": false,
+  "tabWidth": 2,
+  "useTabs": false,
+  "trailingComma": "es5",
+  "printWidth": 100,
+  "endOfLine": "lf",
+  "bracketSpacing": true,
+  "plugins": ["prettier-plugin-xml", "prettier-plugin-tailwindcss"],
+  "overrides": [
+    {
+      "files": "*.xml",
+      "options": {
+        "tabWidth": 2,
+        "xmlWhitespaceSensitivity": "ignore",
+        "xmlSelfClosingSpace": true
       }
-    ]
-  }
-  
+    }
+  ]
+}
