--- a/package.json
+++ b/package.json
@@ -44,13 +44,15 @@
     "adm-zip": "^0.5.16",
     "dotenv": "^17.2.2",
     "module-alias": "^2.2.3",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "xmldom": "^0.6.0"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.5.7",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.1",
     "@types/xml2js": "^0.4.14",
+    "@types/xmldom": "^0.1.34",
     "eslint": "^9.35.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
